fix button width, text letter-spacing

--- a/gulp/blocks/main/_main.scss
+++ b/gulp/blocks/main/_main.scss
@@ -53,7 +53,7 @@
     }
 
     .button {
-      min-width: 230px;
+      min-width: 280px;
       margin-bottom: 15px;
 
       &:last-child {
